--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,10 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<div>
+			<br>
+			<a href="/books">Books</a>
+
+		</div>
 	</body>
 </html>
