--- a/src/app.html
+++ b/src/app.html
@@ -4,14 +4,22 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="main.css">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<nav>
+			<ul class="menuItems">
+			  <li><a href="/">Home</a></li>
+			  <li><a href="/books">Books</a></li>
+			  <li><a href="/">Contact</a></li>
+			</ul>
+		</nav>
 		<div style="display: contents">%sveltekit.body%</div>
-		<div>
-			<br>
-			<a href="/books">Books</a>
+		<footer>
+			Copyright @ 2024
 
-		</div>
+		</footer>
 	</body>
 </html>
